--- a/config.toml
+++ b/config.toml
@@ -58,7 +58,7 @@ MathJaxVersion = "2.7.1"
 
   [params.intro]
   header = "Amar Sibia"
-  paragraph = "Another fine responsive site template by <a href=\"http://html5up.net\">HTML5 UP</a>. Ported by Julio Pescador with some extra goodies <i class='fa fa-hand-peace-o'></i>"
+  paragraph = " <i class='fa fa-hand-peace-o'></i>"
   about = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tellus lacus, auctor vehicula molestie quis, tempor quis velit. Quisque in quam ac leo efficitur vulputate. Phasellus ullamcorper aliquam sodales. Maecenas sit amet condimentum ipsum. Proin sit amet ligula elit. Mauris."
 
     [params.intro.pic]
