config.toml: changed

--- a/config.toml
+++ b/config.toml
@@ -108,7 +108,7 @@ identifier = "fa fa-envelope-o"
 weight = 6
 
 [social]
-github = "jpescador/hugo-future-imperfect"
+github = "amarsibia"
 gitlab = ""
 stackoverflow = ""
 bitbucket = ""
