config.toml: changed

--- a/config.toml
+++ b/config.toml
@@ -110,8 +110,7 @@ weight = 6
 [social]
 github = "amarsibia"
 medium = ""
-linkedin = "example"
-linkedin_company = "examplebusiness"
+linkedin = "amardeep.singh-sibia"
 foursquare = ""
 xing = ""
 slideshare = ""
