--- a/config.toml
+++ b/config.toml
@@ -111,5 +111,5 @@ weight = 6
 github = "amarsibia"
 medium = ""
 linkedin = "amardeep.singh-sibia"
-twitter = "example"
+twitter = "amarsibia"
 email = "example"
