config.toml: changed

--- a/config.toml
+++ b/config.toml
@@ -112,4 +112,4 @@ github = "amarsibia"
 medium = ""
 linkedin = "amardeep.singh-sibia"
 twitter = "amarsibia"
-email = "example"
+email = "amarsibia"
