config.toml: changed

--- a/config.toml
+++ b/config.toml
@@ -109,7 +109,7 @@ weight = 6
 
 [social]
 github = "amarsibia"
-medium = ""
+medium = "amarsibia"
 linkedin = "amardeep.singh-sibia"
 twitter = "amarsibia"
 email = "amarsibia"
